--- a/ErabliereApi/Resources/Controllers/ErablieresController.fr-CA.resx
+++ b/ErabliereApi/Resources/Controllers/ErablieresController.fr-CA.resx
@@ -13,6 +13,9 @@
         <value>Impossible de créer une érablière non pubique sans authentification. Veillez assigner la propriété IsPublic à true.</value>
     </data>
     <data name="AccessCannotBeEmpty" xml:space="preserve">
-        <value>L'accès du client ne peut pas être vide</value>
+        <value>L'accès du client ne peut pas être vide.</value>
+    </data>
+    <data name="AccessMustBeIn0To5" xml:space="preserve">
+        <value>L'accès du client doit être compris entre 0 et 15.</value>
     </data>
 </root>
